tests/parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> expr
Rule 2     statement -> STRING . WRITE ( STRING )
Rule 3     statement -> CREATEFILE ( STRING )
Rule 4     statement -> PRINT ( STRING )
Rule 5     statement -> PRINT ( statement )
Rule 6     statement -> var_assign
Rule 7     statement -> NAME ( )
Rule 8     statement -> IF ( condition ) : statement
Rule 9     statement -> FOR ( var_assign TO expr ) : statement
Rule 10    statement -> NAME ( ) : statement
Rule 11    statement -> <empty>
Rule 12    var_assign -> NAME = statement
Rule 13    var_assign -> NAME = STRING
Rule 14    expr -> NUMBER
Rule 15    expr -> NAME
Rule 16    expr -> - expr  [precedence=right, level=3]
Rule 17    expr -> expr / expr  [precedence=left, level=2]
Rule 18    expr -> expr * expr  [precedence=left, level=2]
Rule 19    expr -> expr - expr  [precedence=left, level=1]
Rule 20    expr -> expr + expr  [precedence=left, level=1]
Rule 21    condition -> expr EQEQ expr

Terminals, with rules where they appear:

(                    : 2 3 4 5 7 8 9 10
)                    : 2 3 4 5 7 8 9 10
*                    : 18
+                    : 20
-                    : 16 19
.                    : 2
/                    : 17
:                    : 8 9 10
=                    : 12 13
CREATEFILE           : 3
EQEQ                 : 21
FOR                  : 9
IF                   : 8
NAME                 : 7 10 12 13 15
NUMBER               : 14
PRINT                : 4 5
STRING               : 2 2 3 4 13
TO                   : 9
WRITE                : 2
error                : 

Nonterminals, with rules where they appear:

condition            : 8
expr                 : 1 9 16 17 17 18 18 19 19 20 20 21 21
statement            : 5 8 9 10 12 0
var_assign           : 6 9


state 0

    (0) S' -> . statement
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 3
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    statement                      shift and go to state 1
    expr                           shift and go to state 2
    var_assign                     shift and go to state 6

state 1

    (0) S' -> statement .


state 2

    (1) statement -> expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    $end            reduce using rule 1 (statement -> expr .)
    )               reduce using rule 1 (statement -> expr .)
    TO              reduce using rule 1 (statement -> expr .)
    /               shift and go to state 12
    *               shift and go to state 13
    -               shift and go to state 14
    +               shift and go to state 15


state 3

    (2) statement -> STRING . . WRITE ( STRING )
    .               shift and go to state 16


state 4

    (3) statement -> CREATEFILE . ( STRING )
    (               shift and go to state 17


state 5

    (4) statement -> PRINT . ( STRING )
    (5) statement -> PRINT . ( statement )
    (               shift and go to state 18


state 6

    (6) statement -> var_assign .
    $end            reduce using rule 6 (statement -> var_assign .)
    )               reduce using rule 6 (statement -> var_assign .)
    TO              reduce using rule 6 (statement -> var_assign .)


state 7

    (7) statement -> NAME . ( )
    (10) statement -> NAME . ( ) : statement
    (15) expr -> NAME .
    (12) var_assign -> NAME . = statement
    (13) var_assign -> NAME . = STRING
    (               shift and go to state 19
    /               reduce using rule 15 (expr -> NAME .)
    *               reduce using rule 15 (expr -> NAME .)
    -               reduce using rule 15 (expr -> NAME .)
    +               reduce using rule 15 (expr -> NAME .)
    $end            reduce using rule 15 (expr -> NAME .)
    )               reduce using rule 15 (expr -> NAME .)
    TO              reduce using rule 15 (expr -> NAME .)
    =               shift and go to state 20


state 8

    (8) statement -> IF . ( condition ) : statement
    (               shift and go to state 21


state 9

    (9) statement -> FOR . ( var_assign TO expr ) : statement
    (               shift and go to state 22


state 10

    (14) expr -> NUMBER .
    /               reduce using rule 14 (expr -> NUMBER .)
    *               reduce using rule 14 (expr -> NUMBER .)
    -               reduce using rule 14 (expr -> NUMBER .)
    +               reduce using rule 14 (expr -> NUMBER .)
    $end            reduce using rule 14 (expr -> NUMBER .)
    )               reduce using rule 14 (expr -> NUMBER .)
    TO              reduce using rule 14 (expr -> NUMBER .)
    EQEQ            reduce using rule 14 (expr -> NUMBER .)


state 11

    (16) expr -> - . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 23

state 12

    (17) expr -> expr / . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 25

state 13

    (18) expr -> expr * . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 26

state 14

    (19) expr -> expr - . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 27

state 15

    (20) expr -> expr + . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 28

state 16

    (2) statement -> STRING . . WRITE ( STRING )
    WRITE           shift and go to state 29


state 17

    (3) statement -> CREATEFILE ( . STRING )
    STRING          shift and go to state 30


state 18

    (4) statement -> PRINT ( . STRING )
    (5) statement -> PRINT ( . statement )
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 31
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    )               reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    statement                      shift and go to state 32
    expr                           shift and go to state 2
    var_assign                     shift and go to state 6

state 19

    (7) statement -> NAME ( . )
    (10) statement -> NAME ( . ) : statement
    )               shift and go to state 33


state 20

    (12) var_assign -> NAME = . statement
    (13) var_assign -> NAME = . STRING
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 35
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 11 (statement -> .)
    )               reduce using rule 11 (statement -> .)
    TO              reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    statement                      shift and go to state 34
    expr                           shift and go to state 2
    var_assign                     shift and go to state 6

state 21

    (8) statement -> IF ( . condition ) : statement
    (21) condition -> . expr EQEQ expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    condition                      shift and go to state 36
    expr                           shift and go to state 37

state 22

    (9) statement -> FOR ( . var_assign TO expr ) : statement
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    NAME            shift and go to state 39

    var_assign                     shift and go to state 38

state 23

    (16) expr -> - expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    /               reduce using rule 16 (expr -> - expr .)
    *               reduce using rule 16 (expr -> - expr .)
    -               reduce using rule 16 (expr -> - expr .)
    +               reduce using rule 16 (expr -> - expr .)
    $end            reduce using rule 16 (expr -> - expr .)
    )               reduce using rule 16 (expr -> - expr .)
    TO              reduce using rule 16 (expr -> - expr .)
    EQEQ            reduce using rule 16 (expr -> - expr .)


state 24

    (15) expr -> NAME .
    /               reduce using rule 15 (expr -> NAME .)
    *               reduce using rule 15 (expr -> NAME .)
    -               reduce using rule 15 (expr -> NAME .)
    +               reduce using rule 15 (expr -> NAME .)
    $end            reduce using rule 15 (expr -> NAME .)
    )               reduce using rule 15 (expr -> NAME .)
    TO              reduce using rule 15 (expr -> NAME .)
    EQEQ            reduce using rule 15 (expr -> NAME .)


state 25

    (17) expr -> expr / expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    /               reduce using rule 17 (expr -> expr / expr .)
    *               reduce using rule 17 (expr -> expr / expr .)
    -               reduce using rule 17 (expr -> expr / expr .)
    +               reduce using rule 17 (expr -> expr / expr .)
    $end            reduce using rule 17 (expr -> expr / expr .)
    )               reduce using rule 17 (expr -> expr / expr .)
    TO              reduce using rule 17 (expr -> expr / expr .)
    EQEQ            reduce using rule 17 (expr -> expr / expr .)


state 26

    (18) expr -> expr * expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    /               reduce using rule 18 (expr -> expr * expr .)
    *               reduce using rule 18 (expr -> expr * expr .)
    -               reduce using rule 18 (expr -> expr * expr .)
    +               reduce using rule 18 (expr -> expr * expr .)
    $end            reduce using rule 18 (expr -> expr * expr .)
    )               reduce using rule 18 (expr -> expr * expr .)
    TO              reduce using rule 18 (expr -> expr * expr .)
    EQEQ            reduce using rule 18 (expr -> expr * expr .)


state 27

    (19) expr -> expr - expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    -               reduce using rule 19 (expr -> expr - expr .)
    +               reduce using rule 19 (expr -> expr - expr .)
    $end            reduce using rule 19 (expr -> expr - expr .)
    )               reduce using rule 19 (expr -> expr - expr .)
    TO              reduce using rule 19 (expr -> expr - expr .)
    EQEQ            reduce using rule 19 (expr -> expr - expr .)
    /               shift and go to state 12
    *               shift and go to state 13


state 28

    (20) expr -> expr + expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    -               reduce using rule 20 (expr -> expr + expr .)
    +               reduce using rule 20 (expr -> expr + expr .)
    $end            reduce using rule 20 (expr -> expr + expr .)
    )               reduce using rule 20 (expr -> expr + expr .)
    TO              reduce using rule 20 (expr -> expr + expr .)
    EQEQ            reduce using rule 20 (expr -> expr + expr .)
    /               shift and go to state 12
    *               shift and go to state 13


state 29

    (2) statement -> STRING . WRITE . ( STRING )
    (               shift and go to state 40


state 30

    (3) statement -> CREATEFILE ( STRING . )
    )               shift and go to state 41


state 31

    (4) statement -> PRINT ( STRING . )
    (2) statement -> STRING . . WRITE ( STRING )
    )               shift and go to state 42
    .               shift and go to state 16


state 32

    (5) statement -> PRINT ( statement . )
    )               shift and go to state 43


state 33

    (7) statement -> NAME ( ) .
    (10) statement -> NAME ( ) . : statement
    $end            reduce using rule 7 (statement -> NAME ( ) .)
    )               reduce using rule 7 (statement -> NAME ( ) .)
    TO              reduce using rule 7 (statement -> NAME ( ) .)
    :               shift and go to state 44


state 34

    (12) var_assign -> NAME = statement .
    $end            reduce using rule 12 (var_assign -> NAME = statement .)
    )               reduce using rule 12 (var_assign -> NAME = statement .)
    TO              reduce using rule 12 (var_assign -> NAME = statement .)


state 35

    (13) var_assign -> NAME = STRING .
    (2) statement -> STRING . . WRITE ( STRING )
    $end            reduce using rule 13 (var_assign -> NAME = STRING .)
    )               reduce using rule 13 (var_assign -> NAME = STRING .)
    TO              reduce using rule 13 (var_assign -> NAME = STRING .)
    .               shift and go to state 16


state 36

    (8) statement -> IF ( condition . ) : statement
    )               shift and go to state 45


state 37

    (21) condition -> expr . EQEQ expr
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    EQEQ            shift and go to state 46
    /               shift and go to state 12
    *               shift and go to state 13
    -               shift and go to state 14
    +               shift and go to state 15


state 38

    (9) statement -> FOR ( var_assign . TO expr ) : statement
    TO              shift and go to state 47


state 39

    (12) var_assign -> NAME . = statement
    (13) var_assign -> NAME . = STRING
    =               shift and go to state 20


state 40

    (2) statement -> STRING . WRITE ( . STRING )
    STRING          shift and go to state 48


state 41

    (3) statement -> CREATEFILE ( STRING ) .
    $end            reduce using rule 3 (statement -> CREATEFILE ( STRING ) .)
    )               reduce using rule 3 (statement -> CREATEFILE ( STRING ) .)
    TO              reduce using rule 3 (statement -> CREATEFILE ( STRING ) .)


state 42

    (4) statement -> PRINT ( STRING ) .
    $end            reduce using rule 4 (statement -> PRINT ( STRING ) .)
    )               reduce using rule 4 (statement -> PRINT ( STRING ) .)
    TO              reduce using rule 4 (statement -> PRINT ( STRING ) .)


state 43

    (5) statement -> PRINT ( statement ) .
    $end            reduce using rule 5 (statement -> PRINT ( statement ) .)
    )               reduce using rule 5 (statement -> PRINT ( statement ) .)
    TO              reduce using rule 5 (statement -> PRINT ( statement ) .)


state 44

    (10) statement -> NAME ( ) : . statement
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 3
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 11 (statement -> .)
    )               reduce using rule 11 (statement -> .)
    TO              reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    statement                      shift and go to state 49
    expr                           shift and go to state 2
    var_assign                     shift and go to state 6

state 45

    (8) statement -> IF ( condition ) . : statement
    :               shift and go to state 50


state 46

    (21) condition -> expr EQEQ . expr
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 51

state 47

    (9) statement -> FOR ( var_assign TO . expr ) : statement
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    NUMBER          shift and go to state 10
    NAME            shift and go to state 24
    -               shift and go to state 11

    expr                           shift and go to state 52

state 48

    (2) statement -> STRING . WRITE ( STRING . )
    )               shift and go to state 53


state 49

    (10) statement -> NAME ( ) : statement .
    $end            reduce using rule 10 (statement -> NAME ( ) : statement .)
    )               reduce using rule 10 (statement -> NAME ( ) : statement .)
    TO              reduce using rule 10 (statement -> NAME ( ) : statement .)


state 50

    (8) statement -> IF ( condition ) : . statement
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 3
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 11 (statement -> .)
    )               reduce using rule 11 (statement -> .)
    TO              reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    statement                      shift and go to state 54
    expr                           shift and go to state 2
    var_assign                     shift and go to state 6

state 51

    (21) condition -> expr EQEQ expr .
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    )               reduce using rule 21 (condition -> expr EQEQ expr .)
    /               shift and go to state 12
    *               shift and go to state 13
    -               shift and go to state 14
    +               shift and go to state 15


state 52

    (9) statement -> FOR ( var_assign TO expr . ) : statement
    (17) expr -> expr . / expr
    (18) expr -> expr . * expr
    (19) expr -> expr . - expr
    (20) expr -> expr . + expr
    )               shift and go to state 55
    /               shift and go to state 12
    *               shift and go to state 13
    -               shift and go to state 14
    +               shift and go to state 15


state 53

    (2) statement -> STRING . WRITE ( STRING ) .
    $end            reduce using rule 2 (statement -> STRING . WRITE ( STRING ) .)
    )               reduce using rule 2 (statement -> STRING . WRITE ( STRING ) .)
    TO              reduce using rule 2 (statement -> STRING . WRITE ( STRING ) .)


state 54

    (8) statement -> IF ( condition ) : statement .
    $end            reduce using rule 8 (statement -> IF ( condition ) : statement .)
    )               reduce using rule 8 (statement -> IF ( condition ) : statement .)
    TO              reduce using rule 8 (statement -> IF ( condition ) : statement .)


state 55

    (9) statement -> FOR ( var_assign TO expr ) . : statement
    :               shift and go to state 56


state 56

    (9) statement -> FOR ( var_assign TO expr ) : . statement
    (1) statement -> . expr
    (2) statement -> . STRING . WRITE ( STRING )
    (3) statement -> . CREATEFILE ( STRING )
    (4) statement -> . PRINT ( STRING )
    (5) statement -> . PRINT ( statement )
    (6) statement -> . var_assign
    (7) statement -> . NAME ( )
    (8) statement -> . IF ( condition ) : statement
    (9) statement -> . FOR ( var_assign TO expr ) : statement
    (10) statement -> . NAME ( ) : statement
    (11) statement -> .
    (14) expr -> . NUMBER
    (15) expr -> . NAME
    (16) expr -> . - expr
    (17) expr -> . expr / expr
    (18) expr -> . expr * expr
    (19) expr -> . expr - expr
    (20) expr -> . expr + expr
    (12) var_assign -> . NAME = statement
    (13) var_assign -> . NAME = STRING
    STRING          shift and go to state 3
    CREATEFILE      shift and go to state 4
    PRINT           shift and go to state 5
    NAME            shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 11 (statement -> .)
    )               reduce using rule 11 (statement -> .)
    TO              reduce using rule 11 (statement -> .)
    NUMBER          shift and go to state 10
    -               shift and go to state 11

    var_assign                     shift and go to state 6
    expr                           shift and go to state 2
    statement                      shift and go to state 57

state 57

    (9) statement -> FOR ( var_assign TO expr ) : statement .
    $end            reduce using rule 9 (statement -> FOR ( var_assign TO expr ) : statement .)
    )               reduce using rule 9 (statement -> FOR ( var_assign TO expr ) : statement .)
    TO              reduce using rule 9 (statement -> FOR ( var_assign TO expr ) : statement .)
